--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -1,104 +1,134 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Report</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lung Cancer Report</title>
     <style>
-        /* Add your report styles here */
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             background-color: #f2f2f2;
             margin: 0;
             padding: 0;
         }
-        .spacer {
-            max-width: 80%; /* Set max-width to 80% */
-            margin: 0 auto;
-            padding: 40px;
-        }
-        .report-container {
-            max-width: 80%; /* Set max-width to 80% */
-            height: 1100px;
+
+        .container {
+            width: 80%;
             margin: 0 auto;
             padding: 20px;
-            border: 1px solid #ddd;
+            border-collapse: collapse;
             background-color: #fff;
-            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-            text-align: left; /* Align text to the left */
         }
+
+        h1,
+        h2 {
+            text-align: center;
+        }
+
         .separator {
             margin-top: 20px;
             border-top: 1px solid #ddd;
         }
+
         .patient-info {
+            margin: 20px 0;
             font-size: 18px;
-            font-weight: bold;
         }
+
         .image-section {
-            margin-top: 20px;
-            text-align: center; /* Align images to the center */
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            margin: 20px 0;
         }
+
         .image-container {
-            margin-top: 10px;
             border: 1px solid #ddd;
             padding: 10px;
-            width: 300px; /* Set fixed width for the image containers */
-            height: 300px; /* Set fixed height for the image containers */
-            overflow: hidden; /* Hide overflowing image parts */
-            position: relative; /* Position for loading animation */
-            display: inline-block; /* Display images inline */
+            width: 45%;
+            overflow: hidden;
+            display: inline-block;
+            box-sizing: border-box;
         }
+
         .report-image {
-            width: 100%; /* Make images responsive */
-            height: 100%; /* Make images responsive */
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
+
+        .ct-scan-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        .ct-scan-table td {
+            padding: 0;
+            width: 10%;
+            height: 100px;
+        }
+
+        .ct-scan-image-container {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        .ct-scan-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        @media print {
+            .page-break {
+                page-break-before: always;
+            }
         }
     </style>
 </head>
-<body>
-    <div class="spacer"></div>
-    <div class="report-container">
-        <h1 style="text-align: center;">Lung Cancer Report</h1>
-        <div class="separator"></div>
-        <div class="patient-info">
-            <p><strong>Name:</strong>{{ name }}</p>
-            <p><strong>DOB:</strong>{{ birthdate }}</p>
-            <p><strong>ID:</strong> {{ name }}</p>
-            <p><strong>Cancer:</strong> {{ predictions }}</p>
-        </div>
-        <div class="separator"></div>
 
-         <!-- First Image Section -->
-         <div class="image-section">
-            <h2>Rib Cage</h2>
-            <div class="image-container">
-                <!-- Add your first image here with specified dimensions -->
-                <img class="report-image" src="data:image/png;base64,{{ image1_base64 }}" alt="Image 1" width="300" height="300">
+<body>
+    <div class="container">
+        <div class="page1">
+            <h1>Lung Cancer Report</h1>
+            <div class="separator"></div>
+            <div class="patient-info">
+                <p><strong>Name:</strong> {{ name }}</p>
+                <p><strong>DOB:</strong> {{ birthdate }}</p>
+                <p><strong>ID:</strong> {{ name }}</p>
+                <p><strong>Status:</strong> {{ predictions }}</p>
             </div>
+            <div class="separator"></div>
+            {% if masked_image_exists %}
+            <div class="image-section">
+                <div class="image-container">
+                    <img class="report-image" src="data:image/png;base64,{{ image1_base64 }}" alt="Masked Image">
+                </div>
+                <div class="image-container">
+                    <img class="report-image" src="data:image/png;base64,{{ image2_base64 }}" alt="Original Image">
+                </div>
+            </div>
+            {% endif %}
         </div>
-        <div class="separator"></div>
-        <!-- Second Image Section -->
-        <div class="image-section">
-            <h2>Lungs</h2>
-            <div class="image-container">
-                <!-- Add your second image here with specified dimensions -->
-                <img class="report-image" src="data:image/png;base64,{{ image2_base64 }}" alt="Image 2" width="300" height="300">
-            </div>
+        <div class="page-break"></div>
+        <div class="page2">
+            <h2>CT Scan</h2>
+            <table class="ct-scan-table">
+                {% for image_base64 in axial_image_base64_list %}
+                {% if loop.index0 % 10 == 0 %}<tr>{% endif %}
+                <td>
+                    <div class="ct-scan-image-container">
+                        <img class="ct-scan-image" src="data:image/png;base64,{{ image_base64 }}" alt="CT Scan Image">
+                    </div>
+                </td>
+                {% if loop.index % 10 == 0 or loop.last %}</tr>{% endif %}
+                {% endfor %}
+            </table>
         </div>
     </div>
-    <!-- New Container (Dynamic Height) -->
-    <div class="spacer"></div>
-    <div class="spacer"></div>
-    <div class="report-container">
-        <div class="separator"></div>
-        <!-- Third Image Section -->
-        <div class="image-section">
-            <h2>Bronchi</h2>
-            <div class="image-container">
-                <!-- Add your third image here with specified dimensions -->
-                <img class="report-image" src="data:image/png;base64,{{ image3_base64 }}" alt="Image 3" width="300" height="300">
-            </div>
-        </div>
-    </div>
-    <div class="spacer"></div>
 </body>
+
 </html>
